# game-marketplace-app

./: .gitignore  README.md
client/: index.html  package.json  tailwind.config.js
client/src/: App.tsx  main.tsx
client/src/components/: Hero.tsx  Navbar.tsx  Trending.tsx
server/: pyproject.toml
server/models/: Product.py
