[tool.poetry]
name = "server"
version = "0.1.0"
description = "An API for Game Marketplace"
authors = ["Karassay <karassayraushanbek@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
strawberry-graphql = {extras = ["fastapi"], version = "^0.205.0"}
masonite-orm = "^2.19.1"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
